@@ -2,6 +2,8 @@
 -------------------
  - Don't error on empty xml namespaces declarations in inline schema's (#186)
  - Wrap importing of sqlite3 in try..except for Google App Engine (#243)
+ - Don't use pkg_resources to determine the zeep version, use __version__ 
+   instead (#243).
 
 
 0.20.0 (2016-10-24)
